# Recursive-Language-Models-Claude-Implementation

./: CLAUDE.md  README.md  example_usage.py  install.sh  main.py  pyproject.toml  uninstall.sh
rlm/: __init__.py  core.py  orchestrator.py  prompts.py
skill/: SKILL.md
