[project]
name = "rlm-claude"
version = "0.1.0"
description = "Recursive Language Models implementation for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm"]
